--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "bitcoin-script"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Matt Bell <mappum@gmail.com>"]
-edition = "2018"
+edition = "2021"
 description = "Inline Bitcoin scripts"
 license = "MIT"
 repository = "https://github.com/mappum/rust-bitcoin-script"
@@ -13,8 +13,7 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# bitcoin = "0.31.1"
-bitcoin = { git = "https://github.com/stevenroose/rust-bitcoin", rev = "639d552ef0080a68b1ea883298aa30c450d9ff0d" }
+bitcoin = "0.31.1"
 quote = "1.0.23"
 proc-macro-error = "1.0.4"
 lazy_static = "1.4.0"
